examples/deployment/manifests/kserve-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-ml-internal
  namespace: ml-prod
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              k8s-namespace: ml-internal # Only allow ml-internal pods to talk to ml-prod
